@@ -1,9 +1,13 @@
 package app.gameplayFeatures;
 
+import app.Game;
 import app.fastFeatures.AudioPlayer;
-import app.fastFeatures.LabelManager;
 import app.Roaster;
 import app.menus.PauseMenu;
+import domain.characters.*;
+import domain.consumables.ManaPotion;
+import domain.consumables.ShardOfAether;
+import domain.consumables.VitalityPotion;
 import domain.dangers.EtherStorm;
 import domain.generalClasses.Inventory;
 import domain.generalClasses.EnemyCharacter;
@@ -13,16 +17,23 @@ import javafx.scene.Group;
 import javafx.scene.Scene;
 import javafx.scene.canvas.Canvas;
 import javafx.scene.canvas.GraphicsContext;
+import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
+import javafx.scene.input.KeyEvent;
+import javafx.scene.layout.StackPane;
+import javafx.scene.media.Media;
+import javafx.scene.media.MediaPlayer;
+import javafx.scene.media.MediaView;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
+import javafx.stage.Stage;
 
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.Random;
-import java.util.Set;
+import java.net.URL;
+import java.util.*;
 
+import static app.fastFeatures.ButtonManager.*;
+import static app.fastFeatures.LabelManager.createLabel;
 import static app.fastFeatures.PublicVariables.*;
 import static domain.generalClasses.EnemyCharacter.randomQuantity;
 
@@ -31,7 +42,6 @@ public class Gameplay {
     // Variables diversas.
 
     private static boolean grabConsumable;
-    private static boolean drawConsumable;
     private static boolean activateRange;
     private static AnimationTimer gameplayTimer;
     private static ArrayList<Consumables> inventory;
@@ -39,7 +49,7 @@ public class Gameplay {
     private static int previusY;
     private static Scene gameplayScene;
     private  static Group root;
-    private  static Canvas canvas;
+    private  static Canvas  canvas;
     private static GraphicsContext graphics;
     private static int actionPoints = 2;
     private static Random random = new Random();
@@ -51,6 +61,22 @@ public class Gameplay {
     private static long time;
     private static Font font;
     private static boolean methodDone=false;
+    public static int mission = 0;
+    private static MediaPlayer mediaPlayer;
+    private static boolean videoFinished = false;
+    private static boolean selectCharacterToConsumable = false;
+    private static boolean characterSelected = false;
+    private static int selectedCharacter = 0;
+    private static int squareX = 705;
+    private static int squareY = 100;
+    private static int nextCharacter = 40;
+
+    private static Button useItem1;
+    private static Button useItem2;
+    private static Button useItem3;
+    private static boolean usePotion = false;
+    private static boolean useMana = false;
+    private static boolean useShard = false;
 
     private static final Set<String> activeKeys = new HashSet<>();
 
@@ -63,7 +89,11 @@ public class Gameplay {
     private static Label emptyInventoryLabel;
     private static Label potionQuantity;
     private static Label manaQuantity;
+    private static Label shardQuantity;
     private static Label[] characterData=new Label[5];
+    private static Label message;
+
+    private static Button goToAnotherMission;
 
     /*  Los itemNumber son para la cantidad de
         items en el Inventario. En el ItemNumber1
@@ -81,8 +111,10 @@ public class Gameplay {
         setupEnemies();
         playerMovement();
         labelConfigurations();
+        buttonConfigurations();
         gameLoop();
     }
+
 
 
     private static void reviewMission() {
@@ -116,37 +148,39 @@ public class Gameplay {
 
 
     private static void setupEnemies() {
-        int enemia = 5;
-        System.out.println("Puse "+enemia+" enemigos.");
+        int enemia = new Random().nextInt(1, 6);
+        if (mission == 3){
+            enemia = 1;
+        }
         switch (enemia){
             case 1:
-                randomQuantity(enemi, 0);
+                randomQuantity(enemi, 0, mission);
                 enemiSize = 1;
                 break;
             case 2:
-                randomQuantity(enemi, 0);
-                randomQuantity(enemi, 1);
+                randomQuantity(enemi, 0, mission);
+                randomQuantity(enemi, 1, mission);
                 enemiSize = 2;
                 break;
             case 3:
-                randomQuantity(enemi, 0);
-                randomQuantity(enemi, 1);
-                randomQuantity(enemi, 2);
+                randomQuantity(enemi, 0, mission);
+                randomQuantity(enemi, 1, mission);
+                randomQuantity(enemi, 2, mission);
                 enemiSize = 3;
                 break;
             case 4:
-                randomQuantity(enemi, 0);
-                randomQuantity(enemi, 1);
-                randomQuantity(enemi, 2);
-                randomQuantity(enemi, 3);
+                randomQuantity(enemi, 0, mission);
+                randomQuantity(enemi, 1, mission);
+                randomQuantity(enemi, 2, mission);
+                randomQuantity(enemi, 3, mission);
                 enemiSize = 4;
                 break;
             case 5:
-                randomQuantity(enemi, 0);
-                randomQuantity(enemi, 1);
-                randomQuantity(enemi, 2);
-                randomQuantity(enemi, 3);
-                randomQuantity(enemi, 4);
+                randomQuantity(enemi, 0, mission);
+                randomQuantity(enemi, 1, mission);
+                randomQuantity(enemi, 2, mission);
+                randomQuantity(enemi, 3, mission);
+                randomQuantity(enemi, 4, mission);
                 enemiSize = 5;
                 break;
         }
@@ -159,8 +193,6 @@ public class Gameplay {
                         enemi[i][j].setCharacter(player[0]);
                         enemi[i][j].setX(enemi[i][0].getX());
                         enemi[i][j].setY(enemi[i][0].getY());
-                        System.out.println("Posicion del enemigo["+i+"]["+j+"] X: "+enemi[i][j].getX());
-                        System.out.println("Posicion del enemigo["+i+"]["+j+"] Y: "+enemi[i][j].getY());
                     }
                 }
             }
@@ -200,20 +232,190 @@ public class Gameplay {
 
     private static void labelConfigurations() {
         font = new Font("Arial", 20);
-        actionPointLabel = LabelManager.createLabel(705, 48,"Action Points: " + actionPoints, Color.WHITE, font);
-        inventoryLabel = LabelManager.createLabel(770, 550, "Inventario", Color.WHITE, font);
-        emptyInventoryLabel = LabelManager.createLabel(720, 600, "El inventario esta vacio", Color.WHITE, font);
-        potionQuantity= LabelManager.createLabel(725,660,"x"+inventory.getFirst().getQuantity(),Color.WHITE,font);
+        actionPointLabel = createLabel(705, 48,"Action Points: " + actionPoints, Color.WHITE, font);
+        inventoryLabel = createLabel(770, 550, "Inventario", Color.WHITE, font);
+        emptyInventoryLabel = createLabel(720, 600, "El inventario esta vacio", Color.WHITE, font);
+        potionQuantity= createLabel(725,660,"x"+inventory.getFirst().getQuantity(),Color.WHITE,font);
         potionQuantity.setVisible(false);
-        manaQuantity= LabelManager.createLabel(785,660,"x"+inventory.get(1).getQuantity(),Color.WHITE,font);
+        manaQuantity= createLabel(785,660,"x"+inventory.get(1).getQuantity(),Color.WHITE,font);
         manaQuantity.setVisible(false);
-        int y = 80;
+        shardQuantity = createLabel(845, 660, "x"+inventory.get(2).getQuantity(),Color.WHITE,font);
+        shardQuantity.setVisible(false);
+        message = createLabel(60, 720, "¡Les has ganado a todos! ¡Pero todavía faltan enemigos\nen las ruinas del desierto!", Color.WHITE, font);
+        message.setVisible(false);
+        int y = 100;
         for (int i=0;i<5;i++){
-            characterData[i]=LabelManager.createLabel(705,y,player[i].getCharacterName()+": HP: "+player[i].getHealth()+" AP: "+ player[i].getAttack(),Color.WHITE,font);
+            if (player[i].havesMana()){
+                characterData[i] = createLabel(705,y,player[i].getCharacterName()+": HP: "+player[i].getHealth()+" AP: "+ player[i].getAttack()+" MP: "+player[i].getMana(),Color.WHITE,font);
+            }else {
+                characterData[i] = createLabel(705, y, player[i].getCharacterName() + ": HP: " + player[i].getHealth() + " AP: " + player[i].getAttack(), Color.WHITE, font);
+            }
             root.getChildren().add(characterData[i]);
-            y+=20;
+            y+=40;
         }
-        root.getChildren().addAll(actionPointLabel, inventoryLabel, emptyInventoryLabel,potionQuantity,manaQuantity);
+        root.getChildren().addAll(actionPointLabel, message, inventoryLabel, emptyInventoryLabel,potionQuantity,manaQuantity, shardQuantity,actualTerrainData,upperActualTerrainData);
+    }
+
+
+    private static void buttonConfigurations() {
+        Font buttonFont = new Font(14);
+        goToAnotherMission = createButton("¡Vamos para alla!", 60, 790, e -> nextMission(), buttonFont);
+        goToAnotherMission.getStyleClass().add("combat-button");
+
+        useItem1 = createButton("Usar", 705, 690, e -> usePotionInMap(), buttonFont);
+        useItem1.getStyleClass().add("combat-button");
+
+        useItem2 = createButton("Usar", 765, 690, e -> useManaPotionInMap(), buttonFont);
+        useItem2.getStyleClass().add("combat-button");
+
+        useItem3 = createButton("Usar", 825, 690, e -> useShardInMap(), buttonFont);
+        useItem3.getStyleClass().add("combat-button");
+
+        buttonInvisibilizer(goToAnotherMission, useItem1, useItem2, useItem3);
+
+        root.getChildren().addAll(goToAnotherMission,useItem1, useItem2, useItem3);
+    }
+
+    private static void usePotionInMap() {
+        selectCharacterToConsumable = true;
+        usePotion = true;
+        buttonInvisibilizer(useItem2, useItem3);
+
+    }
+
+    private static void useManaPotionInMap() {
+        if(doAllHaveMana()) {
+            selectCharacterToConsumable = true;
+            useMana = true;
+            buttonInvisibilizer(useItem1, useItem3);
+        }
+
+    }
+
+    private static void useShardInMap() {
+        selectCharacterToConsumable = true;
+        useShard = true;
+        buttonInvisibilizer(useItem1, useItem3);
+
+    }
+
+    private static void nextMission(){
+        mission++;
+        if(mission == 4){
+            goToAnotherMission.setText("Creditos.");
+            AudioPlayer.stopTileMap();
+            resetAll();
+            showCreditsVideo(window);
+            return;
+        }
+        buttonInvisibilizer(goToAnotherMission);
+        message.setVisible(false);
+        for (int i = 0; i < enemiSize; i++){
+            Arrays.fill(enemi[i], null);
+        }
+        Combat.setNoRandomPosition(false);
+        Combat.setDropConsumable(false);
+        for(Consumables consumable: inventory){
+            consumable.setX(0);
+            consumable.setY(0);
+        }
+        setupEnemies();
+
+
+        player[0].setX(64);
+        player[0].setY(64);
+    }
+
+    private static void showCreditsVideo(Stage window) {
+        try {
+            URL videoUrl = Gameplay.class.getResource("/final.mp4");
+
+            assert videoUrl != null;
+            Media media = new Media(videoUrl.toString());
+            mediaPlayer = new MediaPlayer(media);
+            MediaView mediaView = new MediaView(mediaPlayer);
+
+            mediaView.setPreserveRatio(true);
+            mediaView.setFitWidth(1000);
+            mediaView.setFitHeight(750);
+
+            StackPane videoPane = new StackPane(mediaView);
+            videoPane.setStyle("-fx-background-color: black;");
+
+            Scene videoScene = new Scene(videoPane, 1000, 750);
+
+            mediaPlayer.setOnEndOfMedia(() -> {
+                videoFinished = true;
+                window.setScene(Game.getMainScene());
+                AudioPlayer.playMainMenu();
+            });
+
+            videoScene.addEventHandler(KeyEvent.KEY_PRESSED, event -> {
+                if (!videoFinished) {
+                    mediaPlayer.stop();
+                    videoFinished = true;
+                    window.setScene(Game.getMainScene());
+                    AudioPlayer.playMainMenu();
+                }
+            });
+
+            window.setScene(videoScene);
+            window.show();
+
+            mediaPlayer.play();
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            window.setScene(Game.getMainScene());
+        }
+    }
+
+    private static void resetAll() {
+        Arrays.fill(player, null);
+
+        for (int i = 0; i<enemiSize; i++){
+            Arrays.fill(enemi[i], null);
+        }
+
+        resetInventory();
+        resetCharacters();
+        Combat.setNoRandomPosition(false);
+        gameplayTimer.stop();
+        mission = 0;
+
+
+    }
+
+    private static void resetInventory() {
+        for (int i = 0; i < inventory.size(); i++){
+            inventory.get(i).setQuantity(0);
+        }
+    }
+
+    private static void resetCharacters() {
+        Alessandra = new Alessandra();
+        Azeli = new Azeli();
+        Cintya = new Cintya();
+        Draven = new Draven();
+        Drekker = new Drekker();
+        Globius = new Globius();
+        Goldan = new Goldan();
+        Gortana = new Gortana();
+        Grisha = new Grisha();
+        Groshta = new Groshta();
+        Heloro = new Heloro();
+        Higlob = new Higlob();
+        Hobag = new Hobag();
+        Hobgrou = new Hobgrou();
+        Jax = new Jax();
+        Lina = new Lina();
+        Lyffa = new Lyffa();
+        Lyrasa = new Lyrasa();
+        Shira = new Shira();
+        Sirael = new Sirael();
+        Xaviru = new Xaviru();
+        Zorak = new Zorak();
+
     }
 
     private static void gameLoop() {
@@ -246,10 +448,12 @@ public class Gameplay {
         drawRange();
         drawPlayer();
         drawEnemy();
+        drawConsumableToUse();
         drawConsumableAtMap();
         drawConsumableAtInventory();
         EtherStorm.drawStorm(graphics);
     }
+
 
     private static void drawEnemy() {
 
@@ -284,12 +488,9 @@ public class Gameplay {
     }
 
     private static void drawCampaignMap() {
+           TileMap.drawCampaignMap(graphics, mission);
 
-        if(campaing){
-            TileMap.drawCampaignMap(graphics);
-        } else {
-            TileMap.drawPvPMap(graphics);
-        }
+
     }
 
     private static void drawRange() {
@@ -298,6 +499,15 @@ public class Gameplay {
 
     private static void drawPlayer() {
         graphics.drawImage(new Image(player[0].getImageName()), player[0].getX(), player[0].getY());
+    }
+
+    private static void drawConsumableToUse() {
+        if (selectCharacterToConsumable){
+            graphics.drawImage(new Image("selectCharacter.png"), squareX, squareY);
+        }
+        if (characterSelected){
+            selectCharacterToConsumable = false;
+        }
     }
 
     private static void drawConsumableAtMap() {
@@ -321,19 +531,71 @@ public class Gameplay {
             graphics.drawImage(new Image(inventory.get(1).getImage()), 765, 602);
             manaQuantity.setVisible(true);
         }
+        if (inventory.get(2).getQuantity()>0){
+            shardQuantity.setText("x"+inventory.get(2).getQuantity());
+            graphics.drawImage(new Image(inventory.get(2).getImage()), 825, 602);
+            shardQuantity.setVisible(true);
+        }
 
     }
 
 
     private static void actualizeState() {
         actualizeCharacterData();
+        actualizeLabels();
+        checkIfConsumableIsOutOfMap();
         checkIfYouLoose();
-        checfIfYouWin();
+        checkIfYouWin();
         checkIfCharacterIsAlive();
         checkIfPlayerCollideWithConsumable();
+        checkIfPlayerDoesntHaveAnyItem();
         checkIfDrawInventory();
         checkIfPlayerCollideWithEnemy();
         applyStormDamageOnce();
+    }
+
+    private static void checkIfConsumableIsOutOfMap() {
+        for (Consumables consumable: inventory){
+            if (consumable.getX() == 0 && consumable.getY() == 0){
+                consumable.setDrawAtMap(false);
+            }
+        }
+    }
+
+    private static void checkIfPlayerDoesntHaveAnyItem() {
+        for (int i = 0; i < inventory.size(); i++) {
+            if (inventory.get(i).getQuantity() < 1) {
+                switch (i) {
+                    case 0:
+                        buttonInvisibilizer(useItem1);
+                        break;
+                    case 1:
+                        buttonInvisibilizer(useItem2);
+                        break;
+                    case 2:
+                        buttonInvisibilizer(useItem3);
+                        break;
+                }
+            } else {
+                switch (i) {
+                    case 0:
+                        buttonVisibilizer(useItem1);
+                        break;
+                    case 1:
+                        buttonVisibilizer(useItem2);
+                        break;
+                    case 2:
+                        buttonVisibilizer(useItem3);
+                        break;
+
+                }
+            }
+
+        }
+    }
+
+    private static void actualizeLabels() {
+
     }
 
     private static void applyStormDamageOnce(){
@@ -368,9 +630,21 @@ public class Gameplay {
     }
 
 
-    private static void checfIfYouWin() {
+    private static void checkIfYouWin() {
         if (areAllEnemiesDead()){
-            System.out.println("¡Has ganado esta partida!");
+
+            message.setVisible(true);
+            goToAnotherMission.setDisable(false);
+            goToAnotherMission.setVisible(true);
+            if(mission == 1){
+                message.setText("¡Increible! ¡Les has ganado a todos los golems! ¡Pero\nmas adentro del desierto hay mas amenazas!");
+            }
+            if (mission == 2){
+                message.setText("¡Les has ganado a esas... cosas! ¡¿De donde habran\n salido?!");
+            }
+            if (mission == 3){
+                message.setText("¡Le has ganado a la maxima criatura del mal! \n¡Nos has salvado!");
+            }
         }
     }
 
@@ -381,6 +655,15 @@ public class Gameplay {
             }
         }
         return true;
+    }
+
+    private static boolean doAllHaveMana(){
+        for (PlayerCharacter p : player){
+            if (p.havesMana()){
+                return true;
+            }
+        }
+        return false;
     }
 
     private static void checkIfCharacterIsAlive() {
@@ -395,14 +678,18 @@ public class Gameplay {
 
     public static void actualizeCharacterData() {
         for (int i=0;i<5;i++){
-            characterData[i].setText(player[i].getCharacterName()+": "+player[i].getHealth()+" AP: "+ player[i].getAttack());
+            if (player[i].havesMana()){
+                characterData[i].setText(player[i].getCharacterName()+": HP: "+player[i].getHealth()+" AP: "+ player[i].getAttack()+" MP: "+player[i].getMana());
+            }else {
+                characterData[i].setText(player[i].getCharacterName() + ": HP: " + player[i].getHealth() + " AP: " + player[i].getAttack());
+            }
         }
     }
 
     private static boolean areAllEnemiesDead() {
         for(int i = 0; i < enemiSize; i++) {
-            for (int j = 0; i < enemi[i].length;i++) {
-                if (enemi[i][j].getHealth() > 0) {
+            for (int j = 0; j < enemi[i].length;j++) {
+                if (enemi[i][0].isAlive()) {
                     return false;
                 }
             }
@@ -439,23 +726,11 @@ public class Gameplay {
                 }
             }
         }
-        /*
-        for (int i = 0; i<enemiSize;i++){
-            for (int j = 0; j < enemi[i].length; j++){
-                if (enemi[i][0] != null && enemi[i][0].isAlive()){
-                    if(player[0].collideRange(enemi[i][0])){
-                        Combat.setupCombat(enemi[i]);
-                    }
-                }
-            }
-        }*/
-
 
         for (int i = 0; i<enemiSize;i++){
             for (int j = 0; j < enemi[i].length; j++){
                 if (enemi[i][j].isAlive()){
                     if (player[0].collideRange(enemi[i][0])) {
-                        System.out.println("Me activo yo.");
                         Combat.setupCombat(enemi[i]);
                         EnemyCharacter.setCollidePlayer(false);
                         PlayerCharacter.setCollideEnemy(false);
@@ -473,18 +748,30 @@ public class Gameplay {
     public static void actualizeConsumablesAtInventary(){
        actualizePotionAtInventary();
        actualizeManaAtInventary();
+       actualizeShardAetherAtInventary();
 
     }
+
+    private static void actualizeShardAetherAtInventary() {
+        if (inventory.get(2).getQuantity() < 1){
+            shardQuantity.setVisible(false);
+        }
+        else {
+            shardQuantity.setText("X"+inventory.get(2).getQuantity());
+        }
+    }
+
     public static void actualizePotionAtInventary(){
-        if (inventory.get(0).getQuantity()==0){
+        if (inventory.getFirst().getQuantity() < 1){
             potionQuantity.setVisible(false);
         }
         else {
-            potionQuantity.setText("X"+inventory.get(0).getQuantity());
+            potionQuantity.setText("X"+inventory.getFirst().getQuantity());
         }
     }
+
     public static void actualizeManaAtInventary(){
-        if (inventory.get(1).getQuantity()==0){
+        if (inventory.get(1).getQuantity() < 1){
             manaQuantity.setVisible(false);
         }
         else {
@@ -510,8 +797,12 @@ public class Gameplay {
 
                 case "A":
                     // Tecla A mueve el jugador hacia la izquierda-abajo (X-48, Y+32)
+                    if (selectCharacterToConsumable){
+                        break;
+                    }
                    previusX = player[0].getX();
                    previusY = player[0].getY();
+
                         if (actionPoints != noPoints) {
                             actionPoints--;
                         } else {
@@ -532,6 +823,9 @@ public class Gameplay {
                         }
                     break;
                 case "D":
+                    if (selectCharacterToConsumable){
+                        break;
+                    }
                     // Tecla D mueve el jugador hacia la derecha-abajo (X+48, Y+32)
                     previusX = player[0].getX();
                     previusY = player[0].getY();
@@ -555,6 +849,14 @@ public class Gameplay {
 
                     break;
                 case "W":
+                    if (selectCharacterToConsumable){
+                        if(squareY == 80 || selectedCharacter == 0){
+                            break;
+                        }
+                        selectedCharacter--;
+                        squareY -= nextCharacter;
+                        break;
+                    }
                     // Tecla W mueve el jugador hacia arriba (Y-64)
                     previusX = player[0].getX();
                     previusY = player[0].getY();
@@ -577,6 +879,14 @@ public class Gameplay {
 
                     break;
                 case "S":
+                    if (selectCharacterToConsumable){
+                        if(squareY == 160 || selectedCharacter == 4){
+                            break;
+                        }
+                        selectedCharacter++;
+                        squareY += nextCharacter;
+                        break;
+                    }
                     // Tecla S mueve el jugador hacia abajo (Y+64)
                     previusX = player[0].getX();
                     previusY = player[0].getY();
@@ -599,6 +909,9 @@ public class Gameplay {
 
                     break;
                 case "Q":
+                    if (selectCharacterToConsumable){
+                        break;
+                    }
                     // Tecla Q mueve el jugador hacia la izquierda-arriba (X-48, Y-32)
                     previusX = player[0].getX();
                     previusY = player[0].getY();
@@ -621,6 +934,9 @@ public class Gameplay {
                         }
                     break;
                 case "E":
+                    if (selectCharacterToConsumable){
+                        break;
+                    }
                     // Tecla E mueve el jugador hacia la derecha-arriba (X+48, Y-32)
                     previusX = player[0].getX();
                     previusY = player[0].getY();
@@ -645,6 +961,9 @@ public class Gameplay {
 
                     break;
                 case "R":
+                    if (selectCharacterToConsumable){
+                        break;
+                    }
                     actionPoints = 2;
 
 
@@ -662,6 +981,60 @@ public class Gameplay {
                     break;
                 case "P":
                         PauseMenu.managePauseMenu();
+                    break;
+                case "SPACE":
+                    if(selectCharacterToConsumable){
+                        if (usePotion){
+                            if (player[selectedCharacter].getHealth() > 0) {
+                                Consumables potionConsumable = inventory.getFirst();
+                                VitalityPotion potion = new VitalityPotion();
+                                player[selectedCharacter].setHealth(player[selectedCharacter].getHealth() + potion.getPointsAdded());
+                                potionConsumable.setQuantity(potionConsumable.getQuantity() - 1);
+                                if (potionConsumable.getQuantity() < 1) {
+                                    potionQuantity.setVisible(false);
+                                }
+                                selectCharacterToConsumable = false;
+                                usePotion = false;
+                                break;
+                            }
+                            break;
+                        }
+                        if (useMana){
+                            if (player[selectedCharacter].getHealth() > 0) {
+                                if (player[selectedCharacter].havesMana()) {
+                                    Consumables potionConsumable = inventory.get(1);
+                                    ManaPotion potion = new ManaPotion();
+                                    player[selectedCharacter].setMana(player[selectedCharacter].getMana() + potion.getPointsAdded());
+                                    potionConsumable.setQuantity(potionConsumable.getQuantity() - 1);
+                                    if (potionConsumable.getQuantity() < 1) {
+                                        manaQuantity.setVisible(false);
+                                    }
+                                    selectCharacterToConsumable = false;
+                                    useMana = false;
+                                    break;
+                                }
+                                break;
+                            }
+                            break;
+                        }
+                        if (useShard){
+                            if (player[selectedCharacter].getHealth() > 0) {
+                                Consumables shardConsumable = inventory.get(2);
+                                ShardOfAether shard = new ShardOfAether();
+                                player[selectedCharacter].setAttack(player[selectedCharacter].getAttack() + shard.getPointsAdded());
+                                shardConsumable.setQuantity(shardConsumable.getQuantity() - 1);
+                                if (shardConsumable.getQuantity() < 1) {
+                                    shardQuantity.setVisible(false);
+                                }
+                                selectCharacterToConsumable = false;
+                                useShard = false;
+                                break;
+                            }
+                            break;
+                        }
+
+                    }
+
                     break;
 
             }
@@ -730,26 +1103,6 @@ public class Gameplay {
 
     }
 
-    public static void cleanup() {
-        if (gameplayTimer != null) {
-            gameplayTimer.stop();
-            gameplayTimer = null;
-        }
-        if (gameplayScene != null) {
-            gameplayScene.setOnKeyPressed(null);
-            gameplayScene.setOnKeyReleased(null);
-        }
-        if (root != null) {
-            root.getChildren().clear();
-            root = null;
-        }
-        if (canvas != null) {
-            canvas = null;
-        }
-        graphics = null;
-        actionPoints = 2;
-        time = 0;
-    }
 
     public static boolean isGrabConsumable() {
         return grabConsumable;
@@ -758,11 +1111,6 @@ public class Gameplay {
     public static void setGrabConsumable(boolean grabConsumable) {
         Gameplay.grabConsumable = grabConsumable;
     }
-
-    public static void setDrawConsumable(boolean drawConsumable) {
-        Gameplay.drawConsumable = drawConsumable;
-    }
-
 
     public static boolean isActivateRange() {
         return activateRange;
